-
Bug
-
Resolution: Done
-
P1: Critical
-
6.4.0 Beta1
-
8dc33d3672 (qt/qtdeclarative/dev) 76ff396468 (qt/qtdeclarative/6.4) 76ff396468 (qt/tqtc-qtdeclarative/6.4)
When compiling https://github.com/rgriebl/brickstore if extra registration in rendercontroller.h is commented in.
Stack trace:
AddressSanitizer:DEADLYSIGNAL ================================================================= ==96950==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000268 (pc 0x7fda952b7155 bp 0x7ffe8c52d1e0 sp 0x7ffe8c52d150 T0) ==96950==The signal is caused by a READ memory access. ==96950==Hint: address points to the zero page. #0 0x7fda952b7155 in QFlags<QQmlJSScope::Flag>::operator&(QQmlJSScope::Flag) const /home/ulf/dev/qt6dev/qtbase/include/QtCore/../../../../qt6dev-src/qtbase/src/corelib/global/qflags.h:116 #1 0x7fda952b0e20 in QQmlJSScope::isScript() const /home/ulf/dev/qt6dev-src/qtdeclarative/src/qmlcompiler/qqmljsscope_p.h:437 #2 0x7fda955b18c8 in QQmlJSTypeResolver::genericType(QDeferredSharedPointer<QQmlJSScope const> const&, QQmlJSTypeResolver::ComponentIsGeneric) const /home/ulf/dev/qt6dev-src/qtdeclarative/src/qmlcompiler/qqmljstyperesolver.cpp:641 #3 0x7fda955b2800 in QQmlJSTypeResolver::genericType(QDeferredSharedPointer<QQmlJSScope const> const&, QQmlJSTypeResolver::ComponentIsGeneric) const /home/ulf/dev/qt6dev-src/qtdeclarative/src/qmlcompiler/qqmljstyperesolver.cpp:687 #4 0x7fda955acfe3 in QQmlJSTypeResolver::generalizeType(QDeferredSharedPointer<QQmlJSScope const> const&) const /home/ulf/dev/qt6dev-src/qtdeclarative/src/qmlcompiler/qqmljstyperesolver.cpp:467 #5 0x7fda95528873 in operator() /home/ulf/dev/qt6dev-src/qtdeclarative/src/qmlcompiler/qqmljsstoragegeneralizer.cpp:41 #6 0x7fda9552943e in QQmlJSStorageGeneralizer::run(QFlatMap<int, QQmlJSCompilePass::InstructionAnnotation, std::less<int>, QList<int>, QList<QQmlJSCompilePass::InstructionAnnotation> >, QQmlJSCompilePass::Function*, QQmlJS::DiagnosticMessage*) /home/ulf/dev/qt6dev-src/qtdeclarative/src/qmlcompiler/qqmljsstoragegeneralizer.cpp:56 #7 0x55a94b999fb0 in CppCodeGenerator::doCompile(QV4::Compiler::Context const*, QQmlJSCompilePass::Function*, QQmlJS::DiagnosticMessage*) /home/ulf/dev/qt6dev-src/qtqmlcompilerplus/src/qmlcompilerplus/cppcodegen.cpp:113 #8 0x55a94b99a9cc in CppCodeGenerator::compileBinding(QV4::Compiler::Context const*, QmlIR::Binding const&) /home/ulf/dev/qt6dev-src/qtqmlcompilerplus/src/qmlcompilerplus/cppcodegen.cpp:132 #9 0x7fda952e9923 in operator() /home/ulf/dev/qt6dev-src/qtdeclarative/src/qmlcompiler/qqmljscompiler.cpp:302 #10 0x7fda952f6799 in for_each<__gnu_cxx::__normal_iterator<BindingOrFunction*, std::vector<BindingOrFunction> >, qCompileQmlFile(QmlIR::Document&, const QString&, QQmlJSSaveFunction, QQmlJSAotCompiler*, QQmlJSCompileError*, bool, QV4::Compiler::CodegenWarningInterface*, const QString*)::<lambda(const BindingOrFunction&)> > /usr/include/c++/10/bits/stl_algo.h:3839 #11 0x7fda952ec33a in qCompileQmlFile(QmlIR::Document&, QString const&, std::function<bool (QV4::CompiledData::SaveableUnitPointer const&, QMap<int, QQmlJSAotFunction> const&, QString*)>, QQmlJSAotCompiler*, QQmlJSCompileError*, bool, QV4::Compiler::CodegenWarningInterface*, QString const*) /home/ulf/dev/qt6dev-src/qtdeclarative/src/qmlcompiler/qqmljscompiler.cpp:325 #12 0x7fda952e8e87 in qCompileQmlFile(QString const&, std::function<bool (QV4::CompiledData::SaveableUnitPointer const&, QMap<int, QQmlJSAotFunction> const&, QString*)>, QQmlJSAotCompiler*, QQmlJSCompileError*, bool, QV4::Compiler::CodegenWarningInterface*, QString const*) /home/ulf/dev/qt6dev-src/qtdeclarative/src/qmlcompiler/qqmljscompiler.cpp:186 #13 0x55a94b97e578 in main /home/ulf/dev/qt6dev-src/qtqmlcompilerplus/tools/qmlsc/qmlsc.cpp:323 #14 0x7fda924bed09 in __libc_start_main ../csu/libc-start.c:308 #15 0x55a94b976c19 in _start (/home/ulf/dev/qt6dev/qtbase/libexec/qmlsc+0x13c19)
- resulted in
-
QTBUG-104744 QML_SEQUENTIAL_CONTAINER doesn't work with lists of object types
-
- Closed
-