QmlCompiler: Don't crash on unknown list value types

Fixes: QTBUG-104743
Change-Id: I551b21498bb746acf05be525dbcb72a74f816c04
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 8dc33d3672420d4a21931492b12ce6691cdab435)