tests/auto/qml/qmlcppcodegen/data/badSequence.qml
@@ -1,0 +1,6 @@
+import TestTypes
+
+Person {
+    property Person other: Person { id: oo }
+    barzles: oo.barzles
+}
